# QArgus

./: .gitignore  LICENSE  LottoTicketAttempt2.txt  README.md  environment.yml  pyproject.toml
notebooks/: mnist10_quantum_counting.ipynb
src/qargus/: __init__.py  activations.py  blocks.py  counting.py  encoding.py  model.py  operators.py  qasm.py  qram.py  regime3_unitary.py  resource_estimation.py  semantic.py  unitary.py  weights.py
tests/: test_activations.py  test_convolution_operator.py  test_counting.py  test_coverage_core.py  test_coverage_operators_weights.py  test_coverage_unitary_qasm_qram.py  test_encoding_ops.py  test_error_tracking.py  test_model_forward.py  test_qasm_export.py  test_qram.py  test_regime3_output.py  test_regime3_unitary_circuit.py  test_residual_block.py  test_semantic_execution.py  test_unitary_subroutines.py  test_weight_import.py
