[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qargus"
version = "0.1.0"
description = "Toy semantic Regime-3 implementation using QuBlock"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "qublock>=0.1.0",
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
demo = [
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
